3 - i'm learning tones of new stuff today 3.1 - reshapped view models , and adapters to adapt the new BUTTERKNIFE STYLE Kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,10 @@ android {
         versionCode 1
         versionName "1.0"
 
-        // TODO
+        // TODO : DONE 4 data binding
+        dataBinding {
+            enabled = true
+        }
     }
     buildTypes {
         release {
